2004-09-14  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-filters 3.0.2. 
	  Tag name: "foomatic-filters-3_0_2".

	* README, USAGE: Updated for version 3.0.2.

2004-08-26  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: SECURITY FIX: foomatic-rip could execute
	  arbitrary commands as user "lp" (or however the spooler's
	  special user is named) on the print server. Advisory ID:
	  CAN-2004-0801.

	  The fixes:

	  - Let unprintable characters be removed from all command line
	    options and environment variables.

	  - Let shell escape characters be removed from file names, queue
	    names, driver options, and some other input strings.

	  - Let "open" commands for file access always use "<" or ">" to
	    specify reading or writing.
 	
2004-06-15  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Made workaround for OpenOffice.org 1.1.0 bug
	  being applied to all OpenOffice.org 1.1.x versions (Thanks to
	  Nigel Tamplin, nigel at metica dot com).

2004-03-28  Till Kamppeter <till.kamppeter@gmx.net>

	* USAGE, foomatic-rip.in: Replaced "GIMP-Print" by "Gimp-Print".

2004-03-26  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-rip.in: Fixed building of PDQ driver description file.

2004-02-18  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-filters 3.0.1. 
	  Tag name: "foomatic-filters-3_0_1".

	* README, USAGE: Updated for version 3.0.1.

2004-01-24  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-filters 3.0.1rc3. 
	  Tag name: "foomatic-filters-3_0_1rc3".

	* README, USAGE: Updated for version 3.0.1rc3.

	* configure.in: Removed the AC_OUTPUT() entry to create a Makefile
	  in the tests directory.

2004-01-24  Till Kamppeter <till.kamppeter@gmx.net>

	* *: Tagged CVS for the release of foomatic-filters 3.0.1rc2. 
	  Tag name: "foomatic-filters-3_0_1rc2".

	* README, USAGE: Updated for version 3.0.1rc2.
